# unit-test-experiments

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mull.yml
.github/variables/: docker_image_version
.github/workflows/: clangformat.yml  cmake.yml  compile_and_test.yml  sonarcloud.yml
drivers/: get_inline.h  gpio.h  gpio_singleton.h  variadic_module.h
examples/: CMakeLists.txt
examples/led_driver_test/: CMakeLists.txt  led.c  led.h  led_test.c
examples/led_driver_test_cmock/: CMakeLists.txt  cmock_cfg.yaml  led_test.c
examples/led_driver_test_cmocka/: CMakeLists.txt  led_test.c
examples/led_driver_test_cmocka/mocks/: mocks.c
examples/led_driver_test_fff/: CMakeLists.txt  led_test.c  led_test.h  normalized_get_inline.h
examples/led_driver_test_gtest/: CMakeLists.txt  led_test.cpp
uut/include/: led.h
uut/src/: led.c
uut_cpp/include/: led.h
uut_cpp/src/: led.cpp
